--- a/_notebooks/2023-08-17-AP-pseudo-vs-python.ipynb
+++ b/_notebooks/2023-08-17-AP-pseudo-vs-python.ipynb
@@ -11,7 +11,7 @@
     "layout: post\n",
     "title: College Board Pseudo Code \n",
     "description: The College Board testing language is Pseudo Code.  Pseudo mean kind-of language that we will compare to Python.\n",
-    "courses: { csp: {week: 1} }\n",
+    "courses: { csa: {week: 0} }\n",
     "type: hacks\n",
     "---"
    ]
@@ -69,9 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A equals B\n"
+     ]
+    }
+   ],
    "source": [
     "# Python code if block to match Pseudo Code\n",
     "a = 1\n",
