--- a/_posts/2023-08-21-Snake.md
+++ b/_posts/2023-08-21-Snake.md
@@ -5,6 +5,7 @@ layout: post
 title: Snake Game
 description: Project to show proficiency in JS, CSS, and HTML
 courses: {csa: {week: 0} }
+type: tangibles
 ---
 <style>
     body{
