--- a/_notebooks/2023-08-23-java-console_games.ipynb
+++ b/_notebooks/2023-08-23-java-console_games.ipynb
@@ -44,13 +44,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "java"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[35m___________________________\n",
+      "|~~~~~~~~~~~~~~~~~~~~~~~~~|\n",
+      "|\u001b[0m          Menu!          \u001b[35m|\n",
+      "|~~~~~~~~~~~~~~~~~~~~~~~~~|\n",
+      "| 0 - Exit                |\n",
+      "| 1 - Rock Paper Scissors |\n",
+      "| 2 - Higher or Lower     |\n",
+      "| 3 - Tic Tac Toe         |\n",
+      "|_________________________|   \u001b[0m\n",
+      "\n",
+      "Choose an option.\n",
+      "\n",
+      "1: Rock Paper Scissors\n",
+      "Type r for rock, p for paper, or s for scissors\n",
+      "You chose rock \n",
+      "The computer chose paper \n",
+      "You lose!\n",
+      "\u001b[0m\n",
+      "\u001b[35m___________________________\n",
+      "|~~~~~~~~~~~~~~~~~~~~~~~~~|\n",
+      "|\u001b[0m          Menu!          \u001b[35m|\n",
+      "|~~~~~~~~~~~~~~~~~~~~~~~~~|\n",
+      "| 0 - Exit                |\n",
+      "| 1 - Rock Paper Scissors |\n",
+      "| 2 - Higher or Lower     |\n",
+      "| 3 - Tic Tac Toe         |\n",
+      "|_________________________|   \u001b[0m\n",
+      "\n",
+      "Choose an option.\n",
+      "\n",
+      "3: Tic Tac Toe\n",
+      "Do you want to play against a friend or the computer?\n",
+      "Type 1 for friend, 2 for computer\n",
+      "Type the number of the square you want to place your piece in\n",
+      "Player 1's turn (X)\n",
+      "1 | 2 | 3\n",
+      "4 | 5 | 6\n",
+      "7 | 8 | 9\n",
+      "Computer's turn (O)\n",
+      "X | 2 | 3\n",
+      "4 | 5 | 6\n",
+      "7 | 8 | 9\n",
+      "Player 1's turn (X)\n",
+      "X | 2 | 3\n",
+      "4 | 5 | O\n",
+      "7 | 8 | 9\n",
+      "Computer's turn (O)\n",
+      "X | X | 3\n",
+      "4 | 5 | O\n",
+      "7 | 8 | 9\n",
+      "That square is already taken, try again\n",
+      "Player 1's turn (X)\n",
+      "X | X | 3\n",
+      "4 | 5 | O\n",
+      "7 | 8 | 9\n",
+      "Player 1 wins!\n",
+      "\u001b[0m\n",
+      "\u001b[35m___________________________\n",
+      "|~~~~~~~~~~~~~~~~~~~~~~~~~|\n",
+      "|\u001b[0m          Menu!          \u001b[35m|\n",
+      "|~~~~~~~~~~~~~~~~~~~~~~~~~|\n",
+      "| 0 - Exit                |\n",
+      "| 1 - Rock Paper Scissors |\n",
+      "| 2 - Higher or Lower     |\n",
+      "| 3 - Tic Tac Toe         |\n",
+      "|_________________________|   \u001b[0m\n",
+      "\n",
+      "Choose an option.\n",
+      "\n",
+      "0: Goodbye, World!\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import java.util.Scanner; //library for user input\n",
     "import java.lang.Math; //library for random numbers\n",
@@ -402,8 +479,7 @@
     "\n",
     "\n",
     "}\n",
-    "ConsoleGame.main(null);\n",
-    "\n"
+    "ConsoleGame.main(null);"
    ]
   },
   {
