--- a/_notebooks/2023-09-05-Week-2-Hacks.ipynb
+++ b/_notebooks/2023-09-05-Week-2-Hacks.ipynb
@@ -341,7 +341,7 @@
     "![]({{ site.baseurl }}/images/sss.png)\n",
     "\n",
     "\n",
-    "Here is the current site runtime: [here](https://drewreed2005.github.io/sss/)\n"
+    "Here is the current site runtime link: [here](https://drewreed2005.github.io/sss/)\n"
    ]
   }
  ],
