--- a/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
+++ b/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "layout: post\n",
+    "title: APCSA 2019 Question 3 \n",
+    "description:\n",
+    "courses: { csa: {week: 4, categories: [2.A, 2.B]} }\n",
+    "categories: []\n",
+    "type: ccc\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Question 3"
    ]
   },
