--- a/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
+++ b/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
@@ -127,15 +127,20 @@
     "    if (str.equals(openDel)){ // if string is an open delimiter add 1 to the number of Open Delimiters identified so far\n",
     "        numOpenDels++;\n",
     "    }\n",
-    "    if(str.equals(closeDel)){ // if string is an closed delimiter add 1 to the number of Closed Delimiters identified so far\n",
+    "    else \n",
+    "        if(str.equals(closeDel)){ // if string is an closed delimiter add 1 to the number of Closed Delimiters identified so far\n",
     "        numCloseDels ++;\n",
-    "    }\n",
+    "        }\n",
     "    if(numCloseDels > numOpenDels){ // if more closed delimiters are identified than open delimiters then return false\n",
     "        return false;\n",
     "    }\n",
-    "    if(numCloseDels < numOpenDels){ // if more open delimiters are identified than closed delimiters then return true\n",
-    "        return true;\n",
+    "        if(numCloseDels < numOpenDels){ // if more open delimiters are identified than closed delimiters then return false\n",
+    "        return false;\n",
     "    }\n",
+    "    else \n",
+    "        if(numCloseDels = numOpenDels){ // if same # of open delimiters are identified than closed delimiters then return true\n",
+    "            return true;\n",
+    "        }\n",
     "}"
    ]
   },
@@ -186,7 +191,6 @@
     "                return false;\n",
     "            }\n",
     "        }\n",
-    "\n",
     "        return numOpenDels == numCloseDels;\n",
     "    }\n",
     "}\n"
@@ -229,6 +233,14 @@
     "+1 Identifies and returns appropriate boolean value to implement one rule\n",
     "\n",
     "+1 Identifies and returns appropriate boolean values for all cases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notes for other students:\n",
+    "- "
    ]
   }
  ],
