--- a/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
+++ b/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
@@ -239,8 +239,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notes for other students:\n",
-    "- "
+    "# Notes for other students:\n",
+    "\n",
+    "**My team:**\n",
+    "\n",
+    "David:\n",
+    "\n",
+    "Alex:\n",
+    "\n",
+    "Derrick:\n",
+    "\n",
+    "Drew:\n",
+    "\n",
+    "**Code Monkeys:**\n",
+    "\n",
+    "Classes - 2022 FRQ #2:\n",
+    "- Need to know public vs. private scope\n",
+    "- Need to know @overide \n",
+    "- Need to know how classes work \n",
+    "- Know getters and setters \n",
+    "\n",
+    "Methods and Control Classes - 2022 FRQ #1:\n",
+    "- Given class and sequence and need to write 2 methods \n",
+    "- Added your own things onto the original code and showed example outputs \n",
+    "- Explains exactly what happened \n",
+    "- Shows testing and explains things needed to know\n",
+    "\n",
+    "Array/Array List - 2022 FRQ #3:\n",
+    "- Don't go too in depth with the code and try to stick more with the basic functions \n",
+    "- Explain the core functions \n",
+    "\n",
+    "Classes - 2015 FRQ #2:\n",
+    "- Make sure you have a class with the type of variable\n",
+    "- Private header \n",
+    "- differentiating between capitals and lengths\n"
    ]
   }
  ],
