--- a/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
+++ b/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
@@ -253,7 +253,7 @@
     "\n",
     "**Code Monkeys:**\n",
     "\n",
-    "Classes - 2022 FRQ #2:\n",
+    "Classes - 2022 FRQ #2: 0.95 - \n",
     "- Need to know public vs. private scope\n",
     "- Need to know @overide \n",
     "- Need to know how classes work \n",
@@ -265,14 +265,16 @@
     "- Explains exactly what happened \n",
     "- Shows testing and explains things needed to know\n",
     "\n",
-    "Array/Array List - 2022 FRQ #3:\n",
+    "Array/Array List - 2022 FRQ #3: \n",
     "- Don't go too in depth with the code and try to stick more with the basic functions \n",
     "- Explain the core functions \n",
     "\n",
-    "Classes - 2015 FRQ #2:\n",
+    "Classes - 2015 FRQ #2: 0.88 - late but had everything\n",
     "- Make sure you have a class with the type of variable\n",
     "- Private header \n",
-    "- differentiating between capitals and lengths\n"
+    "- differentiating between capitals and lengths\n",
+    "- Get basics done and that will lead to the rest being done\n",
+    "\n"
    ]
   }
  ],
