--- a/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
+++ b/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
@@ -153,10 +153,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import java.util.ArrayList;\n",
+    "import java.util.Arrays;\n",
+    "\n",
     "public class Delimiters {\n",
     "    private String openDel;\n",
     "    private String closeDel;\n",
@@ -176,7 +179,7 @@
     "        return delims;\n",
     "    }\n",
     "\n",
-    "    public boolean isBalanced(ArrayList<String> delimiters) {\n",
+    "    public boolean isBalanced(ArrayList<String> delims) {\n",
     "        int numOpenDels = 0;\n",
     "        int numCloseDels = 0;\n",
     "\n",
@@ -193,7 +196,35 @@
     "        }\n",
     "        return numOpenDels == numCloseDels;\n",
     "    }\n",
-    "}\n"
+    "\n",
+    "    public String getOpenDel() {\n",
+    "        return openDel;\n",
+    "    }\n",
+    "\n",
+    "    public String getCloseDel() {\n",
+    "        return closeDel;\n",
+    "    }\n",
+    "\n",
+    "public static void main(String[] args) {\n",
+    "    // Sample tokens\n",
+    "    String[] tokens = {\"(\", \"{\", \"}\", \")\", \"[\", \"]\", \"(\", \")\"};\n",
+    "\n",
+    "    // Create an instance of Delimiters with open and close delimiters\n",
+    "    Delimiters delimiters = new Delimiters(\"(\", \")\");\n",
+    "\n",
+    "    // Get a list of delimiters from the tokens\n",
+    "    ArrayList<String> delimitersList = delimiters.getDelimitersList(tokens);\n",
+    "\n",
+    "    // Check if the delimiters are balanced\n",
+    "    boolean isBalanced = delimiters.isBalanced(delimitersList);\n",
+    "\n",
+    "    System.out.println(\"Tokens: \" + Arrays.toString(tokens));\n",
+    "    System.out.println(\"Open Delimiter: \" + delimiters.getOpenDel());\n",
+    "    System.out.println(\"Close Delimiter: \" + delimiters.getCloseDel());\n",
+    "    System.out.println(\"Delimiters List: \" + delims);\n",
+    "    System.out.println(\"Are the delimiters balanced? \" + isBalanced);\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -241,16 +272,6 @@
    "source": [
     "# Notes for other students:\n",
     "\n",
-    "**My team:**\n",
-    "\n",
-    "David:\n",
-    "\n",
-    "Alex:\n",
-    "\n",
-    "Derrick:\n",
-    "\n",
-    "Drew:\n",
-    "\n",
     "**Code Monkeys:**\n",
     "\n",
     "Classes - 2022 FRQ #2: 0.95 - \n",
@@ -275,6 +296,16 @@
     "- differentiating between capitals and lengths\n",
     "- Get basics done and that will lead to the rest being done\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notes from other students:\n",
+    "- Take more time use more vocab\n",
+    "- Focus on whole group instead of one person \n",
+    "- Focus more on code"
    ]
   }
  ],
