--- a/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
+++ b/_notebooks/2023-09-20-CSAFRQ-2019-3.ipynb
@@ -11,6 +11,7 @@
     "courses: { csa: {week: 4, categories: [2.A, 2.B]} }\n",
     "categories: []\n",
     "type: ccc\n",
+    "toc: true\n",
     "---"
    ]
   },
