--- a/_notebooks/2023-09-25-23-U2-Object-lesson.ipynb
+++ b/_notebooks/2023-09-25-23-U2-Object-lesson.ipynb
@@ -8,9 +8,8 @@
     "## Object Classes\n",
     "toc: true\n",
     "layout: post\n",
-    "title: Object classes\n",
+    "title: U2 Object classes\n",
     "description: Object classes\n",
-    "categories: []\n",
     "---"
    ]
   },
