--- a/_notebooks/2023-09-15-U1-Types.ipynb
+++ b/_notebooks/2023-09-15-U1-Types.ipynb
@@ -5,10 +5,9 @@
    "metadata": {},
    "source": [
     "---\n",
-    "comments: true\n",
     "layout: post\n",
     "title: U1 Data Types Lesson\n",
-    "type: hacks\n",
+    "toc: true\n",
     "---"
    ]
   },
