--- a/_notebooks/2023-10-12-Unit4.ipynb
+++ b/_notebooks/2023-10-12-Unit4.ipynb
@@ -461,7 +461,7 @@
       },
       "source": [
         "**nested iteration**\n",
-        "<details>occurs when we have a loop inside of another loop, similar to nested conditional statements in unit 3"
+        "occurs when we have a loop inside of another loop, similar to nested conditional statements in unit 3"
       ]
     },
     {
@@ -512,7 +512,7 @@
         "### Break Statement\n",
         "\n",
         "**break statement**\n",
-        "<details>is used to exit a loop prematurely, typically when a certain condition is met. In the case of nested loops, it can be used to break out of the innermost loop."
+        "is used to exit a loop prematurely, typically when a certain condition is met. In the case of nested loops, it can be used to break out of the innermost loop."
       ]
     },
     {
@@ -609,7 +609,7 @@
         "### Continue Statement\n",
         "\n",
         "**continue statement**\n",
-        "<details>is used to skip the current iteration of a loop and move to the next iteration. In the case of nested loops, it applies to the innermost loop."
+        "is used to skip the current iteration of a loop and move to the next iteration. In the case of nested loops, it applies to the innermost loop."
       ]
     },
     {
