--- a/_notebooks/2023-10-19-Unit6-Array.ipynb
+++ b/_notebooks/2023-10-19-Unit6-Array.ipynb
@@ -10,8 +10,6 @@
     "layout: post\n",
     "title: Unit 6 Arrays - Teacher notebook\n",
     "description:  Lesson on the College Board Unit 6 Arrays. This is the teacher notebook.\n",
-    "courses: { compsci: {week: 1} }\n",
-    "type: hacks\n",
     "---"
    ]
   },
@@ -93,23 +91,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Error at listOne[5] = 13\n",
-      "ArrayIndexOutOfBoundsException: We can't access a memory index that doesn't exist!\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[I@dd51fe9\n",
-      "0\n"
+      "ArrayIndexOutOfBoundsException: We can't access a memory index that doesn't exist!\n",
+      "[I@2a20cfdc\n",
+      "99\n"
      ]
     }
    ],
@@ -131,7 +127,7 @@
     "\n",
     "\n",
     "System.out.println(listOne); // THIS DOES NOT PRINT THE LIST!! It prints the value in memory\n",
-    "System.out.println(listOne[4]); // This will actually print the vaules in the array"
+    "System.out.println(listOne[3]); // This will actually print the vaules in the array"
    ]
   },
   {
@@ -146,7 +142,11 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -207,41 +207,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mclassList\u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m new Student[3];\u001b[0m",
-      "\u001b[1m\u001b[31m';' expected\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mclassList \u001b[0m\u001b[1m\u001b[30m\u001b[41mnew Student[3]\u001b[0m\u001b[1m\u001b[30m;\u001b[0m",
-      "\u001b[1m\u001b[31mnot a statement\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41mclassList\u001b[0m\u001b[1m\u001b[30m new Student[3];\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   variable classList\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mclassList new \u001b[0m\u001b[1m\u001b[30m\u001b[41mStudent\u001b[0m\u001b[1m\u001b[30m[3];\u001b[0m",
-      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
-      "\u001b[1m\u001b[31m  symbol:   class Student\u001b[0m",
-      "",
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30m\u001b[0m\u001b[1m\u001b[30m\u001b[41mclassList new Student[3];\u001b[0m\u001b[1m\u001b[30m\u001b[0m",
-      "\u001b[1m\u001b[31mmissing return statement\u001b[0m",
-      ""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using a for loop:\n",
+      "Name: Bob\n",
+      "Age: 12\n",
+      "GPA: 3.5\n",
+      "\n",
+      "Name: John\n",
+      "Age: 11\n",
+      "GPA: 4.0\n",
+      "\n",
+      "Name: Steve\n",
+      "Age: 10\n",
+      "GPA: 3.75\n",
+      "\n",
+      "Using a while loop:\n",
+      "Name: Bob\n",
+      "Age: 12\n",
+      "GPA: 3.5\n",
+      "\n",
+      "Name: John\n",
+      "Age: 11\n",
+      "GPA: 4.0\n",
+      "\n",
+      "Name: Steve\n",
+      "Age: 10\n",
+      "GPA: 3.75\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "class Student {\n",
+    "    String name;\n",
+    "    int age;\n",
+    "    double gpa;\n",
     "\n",
-    "classList new Student[3];\n",
-    "Student [] classList;\n",
-    "classList[0] = new Student(\"Bob\", 12, 3.5);\n",
-    "classList[1] = new Student(\"John\", 11, 4.0);\n",
-    "classList[2] = new Student(\"Steve\", 10, 3.75);\n"
+    "    public Student(String name, int age, double gpa) { // Constructors\n",
+    "        this.name = name;\n",
+    "        this.age = age;\n",
+    "        this.gpa = gpa;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class ClassInfo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Student[] classList = new Student[3];\n",
+    "        classList[0] = new Student(\"Bob\", 12, 3.5);\n",
+    "        classList[1] = new Student(\"John\", 11, 4.0);\n",
+    "        classList[2] = new Student(\"Steve\", 10, 3.75);\n",
+    "\n",
+    "        // Using a for loop\n",
+    "        System.out.println(\"Using a for loop:\");\n",
+    "        for (int i = 0; i < classList.length; i++) {\n",
+    "            Student student = classList[i];\n",
+    "            System.out.println(\"Name: \" + student.name);\n",
+    "            System.out.println(\"Age: \" + student.age);\n",
+    "            System.out.println(\"GPA: \" + student.gpa);\n",
+    "            System.out.println();\n",
+    "        }\n",
+    "\n",
+    "        // Using a while loop\n",
+    "        System.out.println(\"Using a while loop:\");\n",
+    "        int index = 0;\n",
+    "        while (index < classList.length) {\n",
+    "            Student student = classList[index];\n",
+    "            System.out.println(\"Name: \" + student.name);\n",
+    "            System.out.println(\"Age: \" + student.age);\n",
+    "            System.out.println(\"GPA: \" + student.gpa);\n",
+    "            System.out.println();\n",
+    "            index++;\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "ClassInfo.main(null)\n"
    ]
   },
   {
@@ -276,23 +325,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
-     "ename": "CompilationException",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mint [] fruitArrayList = \u001b[0m\u001b[1m\u001b[30m\u001b[41m\u001b[0m\u001b[1m\u001b[30m[20,30,10,40,50];\u001b[0m",
-      "\u001b[1m\u001b[31millegal start of expression\u001b[0m",
-      ""
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple\n",
+      "Banana\n",
+      "Custrad Apple\n",
+      "Durian\n",
+      "Eggplant\n"
      ]
     }
    ],
    "source": [
-    "int [] fruitArrayList = [20,30,10,40,50];\n",
-    "    for ( : fruitArrayList)"
+    "String [] fruitArrayList = new String[5];\n",
+    "\n",
+    "fruitArrayList[0] = \"Apple\";\n",
+    "fruitArrayList[1] = \"Banana\";\n",
+    "fruitArrayList[2] = \"Custrad Apple\";\n",
+    "fruitArrayList[3] = \"Durian\";\n",
+    "fruitArrayList[4] = \"Eggplant\";\n",
+    "\n",
+    "    for (String string : fruitArrayList) {\n",
+    "        System.out.println(string);\n",
+    "    }"
    ]
   },
   {
@@ -315,11 +378,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integer List: 1, 5, 2, 26, 23, 8, \n",
+      "\n",
+      "Max integer: 26\n",
+      "Min integer: 1\n",
+      "\n",
+      "Double List: 2.5, 1.8, 3.7, 4.2, 2.0, \n",
+      "\n",
+      "Max double: 4.2\n",
+      "Min double: 1.8\n"
+     ]
+    }
+   ],
    "source": [
-    "int  "
+    "public class MinMax {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Create an array of integers\n",
+    "        int[] intList = {1, 5, 2, 26, 23, 8};\n",
+    "\n",
+    "        // Create an array of doubles\n",
+    "        double[] doubleList = {2.5, 1.8, 3.7, 4.2, 2.0};\n",
+    "\n",
+    "        // Find the maximum and minimum values in the integer array\n",
+    "        int maxInt = intList[0];\n",
+    "        int minInt = intList[0];\n",
+    "\n",
+    "        for (int i = 1; i < intList.length; i++) {\n",
+    "            if (intList[i] > maxInt) {\n",
+    "                maxInt = intList[i];\n",
+    "            }\n",
+    "            if (intList[i] < minInt) {\n",
+    "                minInt = intList[i];\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        // Find the maximum and minimum values in the double array\n",
+    "        double maxDouble = doubleList[0];\n",
+    "        double minDouble = doubleList[0];\n",
+    "\n",
+    "        for (int i = 1; i < doubleList.length; i++) {\n",
+    "            if (doubleList[i] > maxDouble) {\n",
+    "                maxDouble = doubleList[i];\n",
+    "            }\n",
+    "            if (doubleList[i] < minDouble) {\n",
+    "                minDouble = doubleList[i];\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        System.out.print(\"Integer List: \");\n",
+    "        for (int num : intList) {\n",
+    "            System.out.print(num);\n",
+    "            System.out.print(\", \");\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\"\\n\\nMax integer: \" + maxInt);\n",
+    "        System.out.println(\"Min integer: \" + minInt);\n",
+    "\n",
+    "        System.out.print(\"\\nDouble List: \");\n",
+    "        for (double num : doubleList) {\n",
+    "            System.out.print(num);\n",
+    "            System.out.print(\", \");\n",
+    "        }\n",
+    "\n",
+    "        System.out.println(\"\\n\\nMax double: \" + maxDouble);\n",
+    "        System.out.println(\"Min double: \" + minDouble);\n",
+    "    }\n",
+    "}\n",
+    "MinMax.main(null)"
    ]
   }
  ],
@@ -333,7 +469,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.20+8-post-Ubuntu-1ubuntu120.04"
   },
